--- a/lab1.html
+++ b/lab1.html
@@ -7,5 +7,11 @@
 </head>
 <body>
   <!-- your code goes here -->
+    <header>
+      <h1>Ann's Website</h1>
+      <nav></nav>
+    </header>
+    <main></main>
+    <footer></footer>
 </body>
 </html>
