--- a/lab1.html
+++ b/lab1.html
@@ -5,13 +5,47 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lab1</title>
 </head>
-<body>
-  <!-- your code goes here -->
-    <header>
-      <h1>Ann's Website</h1>
-      <nav></nav>
-    </header>
-    <main></main>
-    <footer></footer>
-</body>
+  <body>
+    <!-- your code goes here -->
+      <header>
+        <h1>Ann's Website</h1>
+        <nav>
+          <a href="#about">About Me</a> | <a href="#projects">My Projects</a> | <a href="#contact">Contact Me</a>
+        </nav>
+      </header>
+      <main>
+        <section id="about">
+          <h2>About Me</h2>
+          <figure>
+            <img src="20240819_MimsPortraits_bhs_037.jpg" alt="A picture of Ann" width="300" height="450">
+            <figcaption>Professional headshot</figcaption>
+          </figure>
+          <p>Hello! My name is Ann. I am a student at UC Berkeley, majoring in Information Management and Systems. I'm a big foodie and love the outdoors!</p>
+        </section>
+        <section id="projects">
+          <h2>My Projects</h2>
+          <article>
+            <h3>Project 1: Coach AI</h3>
+            <p>Redesigned an onboarding process for a nonprofit, CareerVillage, for their AI chatbot <a href = "https://www.ann-yu.com/coach-ai"> (see project here)</a></p>
+          </article>
+          <article>
+            <h3>Project 2: MD FactFarm</h3>
+            <p>Developed a Chrome extension to verify the truth of information in YouTube videos <a href = "https://www.ann-yu.com/mdfactfarm"> (see project here)</a></p>
+          </article>
+          <article>
+            <h3>Project 3: SF Picnic Rentals</h3>
+            <p>Redesigned the SF Picnic Rentals website to create a more seamless user interface <a href = "https://www.ann-yu.com/sf-parks"> (see project here)</a></p>
+          </article>
+        </section>
+        <section id="contact">
+          <h2>Contact Me</h2>
+          <address>
+            Email: <a href = "mailto: anncyu@berkeley.edu">anncyu@berkeley.edu</a>
+          </address>
+          <address>Portfolio: <a href = "https://www.ann-yu.com/">https://www.ann-yu.com/</a>
+          </address>
+        </section>
+      </main>
+      <footer></footer>
+  </body>
 </html>
